--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
      console: 
        enabled: true
        path: /h2-console
+   jackson:
+     property-naming-strategy: SNAKE_CASE
        
        
  
